src/bindings.rs

#[test]
fn bindgen_test_layout_Opl3Chip() {
    const UNINIT: ::std::mem::MaybeUninit<Opl3Chip> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<Opl3Chip>(),
        20960usize,
        concat!("Size of: ", stringify!(Opl3Chip))
    );
    assert_eq!(
        ::std::mem::align_of::<Opl3Chip>(),
        8usize,
        concat!("Alignment of ", stringify!(Opl3Chip))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).channel) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(channel)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).slot) as usize - ptr as usize },
        1584usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(slot)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).timer) as usize - ptr as usize },
        4464usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(timer)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_timer) as usize - ptr as usize },
        4472usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(eg_timer)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_timerrem) as usize - ptr as usize },
        4480usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(eg_timerrem)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_state) as usize - ptr as usize },
        4481usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(eg_state)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_add) as usize - ptr as usize },
        4482usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(eg_add)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_timer_lo) as usize - ptr as usize },
        4483usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(eg_timer_lo)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).newm) as usize - ptr as usize },
        4484usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(newm)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).nts) as usize - ptr as usize },
        4485usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(nts)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rhy) as usize - ptr as usize },
        4486usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(rhy)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vibpos) as usize - ptr as usize },
        4487usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(vibpos)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vibshift) as usize - ptr as usize },
        4488usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(vibshift)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tremolo) as usize - ptr as usize },
        4489usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(tremolo)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tremolopos) as usize - ptr as usize },
        4490usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(tremolopos)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tremoloshift) as usize - ptr as usize },
        4491usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(tremoloshift)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).noise) as usize - ptr as usize },
        4492usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(noise)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).zeromod) as usize - ptr as usize },
        4496usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(zeromod)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mixbuff) as usize - ptr as usize },
        4500usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(mixbuff)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rm_hh_bit2) as usize - ptr as usize },
        4516usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(rm_hh_bit2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rm_hh_bit3) as usize - ptr as usize },
        4517usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(rm_hh_bit3)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rm_hh_bit7) as usize - ptr as usize },
        4518usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(rm_hh_bit7)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rm_hh_bit8) as usize - ptr as usize },
        4519usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(rm_hh_bit8)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rm_tc_bit3) as usize - ptr as usize },
        4520usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(rm_tc_bit3)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rm_tc_bit5) as usize - ptr as usize },
        4521usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(rm_tc_bit5)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rateratio) as usize - ptr as usize },
        4524usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(rateratio)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).samplecnt) as usize - ptr as usize },
        4528usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(samplecnt)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).oldsamples) as usize - ptr as usize },
        4532usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(oldsamples)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).samples) as usize - ptr as usize },
        4540usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(samples)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).writebuf_samplecnt) as usize - ptr as usize },
        4552usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(writebuf_samplecnt)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).writebuf_cur) as usize - ptr as usize },
        4560usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(writebuf_cur)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).writebuf_last) as usize - ptr as usize },
        4564usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(writebuf_last)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).writebuf_lasttime) as usize - ptr as usize },
        4568usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(writebuf_lasttime)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).writebuf) as usize - ptr as usize },
        4576usize,
        concat!(
            "Offset of field: ",
            stringify!(Opl3Chip),
            "::",
            stringify!(writebuf)
        )
    );
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_Generate")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_Generate")]
    pub fn Opl3Generate(chip: *mut Opl3Chip, buf: *mut i16);
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_GenerateResampled")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_GenerateResampled")]
    pub fn Opl3GenerateResampled(chip: *mut Opl3Chip, buf: *mut i16);
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_Reset")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_Reset")]
    pub fn Opl3Reset(chip: *mut Opl3Chip, samplerate: u32);
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_WriteReg")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_WriteReg")]
    pub fn Opl3WriteReg(chip: *mut Opl3Chip, reg: u16, v: u8);
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_WriteRegBuffered")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_WriteRegBuffered")]
    pub fn Opl3WriteRegBuffered(chip: *mut Opl3Chip, reg: u16, v: u8);
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_GenerateStream")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_GenerateStream")]
    pub fn Opl3GenerateStream(chip: *mut Opl3Chip, sndptr: *mut i16, numsamples: u32);
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_Generate4Ch")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_Generate4Ch")]
    pub fn Opl3Generate4Ch(chip: *mut Opl3Chip, buf4: *mut i16);
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_Generate4ChResampled")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_Generate4ChResampled")]
    pub fn Opl3Generate4ChResampled(chip: *mut Opl3Chip, buf4: *mut i16);
}
extern "C" {
    #[cfg_attr(not(target_os = "macos"), link_name = "{1}OPL3_Generate4ChStream")]
    #[cfg_attr(target_os = "macos", link_name = "OPL3_Generate4ChStream")]
    pub fn Opl3Generate4ChStream(
        chip: *mut Opl3Chip,
        sndptr1: *mut i16,
        sndptr2: *mut i16,
        numsamples: u32,
    );
}
